feat(device) detect brand Highscreen model: Easy Power Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14630,7 +14630,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice Max|Razar_Pro|Power Rage Evo|Zera[ _][UFS]|PowerFivePro|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice Max|Power Rage Evo|Zera[ _][UFS])[;)/ ]'
@@ -14643,7 +14643,7 @@ Highscreen:
       model: 'Power Four'
     - regex: 'Razar_Pro[;)/ ]'
       model: 'Razar Pro'
-    - regex: 'HIGHSCREEN Easy-Power-Pro[;)/ ]'
+    - regex: '(?:HIGHSCREEN )?Easy-Power-Pro[;)/ ]'
       model: 'Easy Power Pro'
     - regex: 'HIGHSCREEN Easy F PRO[;)/ ]'
       model: 'Easy F Pro'
