--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -299,7 +299,8 @@
     model: RMD-1030
   os_family: Android
   browser_family: Chrome
-- user_agent: Mozilla/5.0 Linux; U; Android 4.1.1; uk-ua; Enot-E102 Build/JRO03H AppleWebKit/534.30 KHTML, like Gecko Version/4.0 Mobile Safari/534.30
+-
+  user_agent: Mozilla/5.0 Linux; U; Android 4.1.1; uk-ua; Enot-E102 Build/JRO03H AppleWebKit/534.30 KHTML, like Gecko Version/4.0 Mobile Safari/534.30
   os:
     name: Android
     short_name: AND
@@ -318,7 +319,8 @@
     model: E102
   os_family: Android
   browser_family: Android Browser
-- user_agent: Mozilla/5.0 (Linux; U; Android 4.0.3; ru-ru; ENOT J101 Build/MID) AppleWebKit/534.30 (KHTML like Gecko) Version/4.0 Safari/534.30
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.0.3; ru-ru; ENOT J101 Build/MID) AppleWebKit/534.30 (KHTML like Gecko) Version/4.0 Safari/534.30
   os:
     name: Android
     short_name: AND
@@ -477,3 +479,23 @@
     model: TAQ-10242MK2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; en-US; Easy-Power-Pro Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.9.7.1153 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 12.9.7.1153
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: H2
+    model: Easy Power Pro
+  os_family: Android
+  browser_family: Unknown
