feat(device) detect brand OPPO model: R9s Plus feat(device) detect brand Xiaomi model: Redmi Note 7 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9449,7 +9449,7 @@ OPPO:
       model: 'R7 Plus F'
     - regex: '(?:OPPO[ _]?)?CPH1607[);/ ]'
       model: 'R9s'
-    - regex: '(?:OPPO[ _]?)?CPH1611[);/ ]'
+    - regex: '(?:OPPO[ _]?)?(?:CPH1611|R9s Plus)[);/ ]'
       model: 'R9s Plus'
     - regex: '(?:CPH1917|PCA[MT]00)[);/ ]'
       model: 'Reno'
@@ -13233,6 +13233,9 @@ Xiaomi:
       device: 'phablet'
     - regex: 'M2003J15SC[);/ ]'
       model: 'Redmi Note 9'
+      device: 'phablet'
+    - regex: 'Redmi Note 7 Pro[);/ ]'
+      model: 'Redmi Note 7 Pro'
       device: 'phablet'
 
     - regex: 'Redmi[ _]Note[ _]([^;/) ]+)?'
