--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -579,3 +579,42 @@
     model: X-Style Tab A82
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; en-US; X_Style_Tab_A103 Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/13.0.8.1291 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 13.0.8.1291
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: 1S
+    model: X-Style Tab A103
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.1.2; zh-CN; MZ-15 Lite Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 MZBrowser/8.1.210-2020031819 UWS/2.15.0.4 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Meizu Browser
+    short_name: MZ
+    version: 8.1.210
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: M1
+    model: 15 Lite
+  os_family: Android
