--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8152,7 +8152,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H|MZ-15 Plus|MZ-16 X)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H|MZ-15 (?:Lite|Plus)|MZ-16 X)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -8220,6 +8220,8 @@ Meizu:
       model: '16th Plus'
     - regex: 'MZ-15 Plus[);/ ]'
       model: '15 Plus'
+    - regex: 'MZ-15 Lite[);/ ]'
+      model: '15 Lite'
     - regex: 'MZ-16th[);/ ]'
       model: '16th'
     - regex: 'MZ-16 X[);/ ]'
