feat(device) detect new brand Anry model: RS10 feat(device) detect new brand Lesia model: Anova A5 feat(device) detect brand Assistant models: Club (AS-5434, AS_501), Target (AS-503)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1730,45 +1730,49 @@ ANS:
 
 # Assistant
 Assistant:
-  regex: '(AS[-_](?:502|543[1-6]|44[12]1|541[12]|54[23]1|6431|401L)|AP-(?:109|115G|721N|753G|7[25]7G|10[68]|107G|110N|941|719))[;/)_ ]'
+  regex: '(AS[-_](?:50[123]|543[1-6]|44[12]1|541[12]|54[23]1|6431|401L)|AP-(?:109|115G|721N|753G|7[25]7G|10[68]|107G|110N|941|719))[;/)_ ]'
   device: 'smartphone'
   models:
-    - regex: 'AS[-_]401L '
+    - regex: 'AS[-_]401L[);/ ]'
       model: 'Asper'
-    - regex: 'AS-5432 '
+    - regex: 'AS-5432[);/ ]'
       model: 'Agio'
-    - regex: 'AS-5433 Secret'
+    - regex: 'AS[-_](?:5434|501)[);/ ]'
+      model: 'Club'
+    - regex: 'AS-5433 Secret[);/ ]'
       model: 'Secret'
-    - regex: 'AS-5433 '
+    - regex: 'AS-5433[);/ ]'
       model: 'Max Secret'
-    - regex: 'AS-5421'
+    - regex: 'AS-5421[);/ ]'
       model: 'Surf'
-    - regex: 'AS-44[12]1'
+    - regex: 'AS-44[12]1[);/ ]'
       model: 'Unami'
-    - regex: 'AS-5431'
+    - regex: 'AS-5431[);/ ]'
       model: 'Prima'
-    - regex: 'AS-502'
+    - regex: 'AS-502[);/ ]'
       model: 'Shot'
-    - regex: 'AS-5435'
+    - regex: 'AS-503[);/ ]'
+      model: 'Target'
+    - regex: 'AS-5435[);/ ]'
       model: 'Shine'
     - regex: 'AS-5436[ _]'
       model: 'Grid'
-    - regex: 'AS-6431'
+    - regex: 'AS-6431[);/ ]'
       model: 'Rider'
     - regex: 'AS-5411[_ ]'
       model: 'Max Ritm'
-    - regex: 'AS-5412 Max'
+    - regex: 'AS-5412 Max[);/ ]'
       model: 'AS-5412 Max'
-    - regex: 'AP-721N'
+    - regex: 'AP-721N[);/ ]'
       model: 'AP-721N Force'
       device: 'tablet'
-    - regex: 'AP-941'
+    - regex: 'AP-941[);/ ]'
       model: 'AP-941'
       device: 'tablet'
-    - regex: 'AP-108'
+    - regex: 'AP-108[);/ ]'
       model: 'Cetus'
       device: 'tablet'
-    - regex: 'AP-106'
+    - regex: 'AP-106[);/ ]'
       model: 'AP-106 Force'
       device: 'tablet'
     - regex: '(AP-(?:109|115G|7[25]7G|753G|107G|110N|719))[/;) ]'
@@ -15507,3 +15511,15 @@ Kooper:
   regex: 'Kooper-mobile-W502[);/ ]'
   device: 'smartphone'
   model: 'Mobile W502'
+
+# Lesia
+Lesia:
+  regex: 'ANOVA A5[);/ ]'
+  device: 'smartphone'
+  model: 'Anova A5'
+
+# Anry
+Anry:
+  regex: 'ANRY-(RS10)[);/ ]'
+  device: 'tablet'
+  model: '$1'
