feat(device) detect brand Cherry Mobile model: Flare X V2 feat(device) detect brand Teclast models: X98 Air II, X98 Power

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3105,7 +3105,7 @@ Changhong:
 
 # Cherry Mobile
 'Cherry Mobile':
-  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[456]|X2)|Flare S Play|Flare_HD_MAX|FLARE LITE|Flare XL Plus|Fusion Bolt|OMEGA HD 4'
+  regex: 'Cherry|Flare([ _])?(2X|4|A[123]|J[1235]|P[13]|S[456]|X2)|Flare[ _](?:S Play|HD_MAX|LITE|XL Plus|X_V2)|Fusion Bolt|OMEGA HD 4'
   device: 'smartphone'
   models:
     - regex: 'Cherry(?: ?Mobile)?[ _]?([^/;]+) Build'
@@ -3120,6 +3120,8 @@ Changhong:
       model: 'Flare S Play'
     - regex: 'Flare XL Plus'
       model: 'Flare XL Plus'
+    - regex: 'Flare[ _]X[_ ]V2'
+      model: 'Flare X V2'
     - regex: 'Flare[ _](A2|J3|P1|S[46])[ _]Lite'
       model: 'Flare $1 Lite'
     - regex: 'Flare[ _](J[12]|S5)[ _]mini'
@@ -11922,7 +11924,7 @@ TCL:
 
 # Teclast
 Teclast:
-  regex: 'Teclast|X98 Air III|Tbook|T30_(ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)'
+  regex: 'Teclast|X98 Air III|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|T30_(ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
@@ -11933,8 +11935,12 @@ Teclast:
       model: 'T30 $1'
     - regex: 'P10S\(N4H5\)'
       model: 'P10S'
+    - regex: 'X80 Power\(B2N4\)[);/ ]'
+      model: 'X98 Power'
     - regex: 'X98 Air III[);/ ]'
       model: 'X98 Air III'
+    - regex: 'X98 Air II\(HG5N\)[);/ ]'
+      model: 'X98 Air II'
     - regex: 'Teclast[_ -]([^;/]+) Build'
       model: '$1'
 
