--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9201,7 +9201,7 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[013]|HD191[01]|HD190[01357]|IN2010)(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[013]|HD191[01]|HD190[01357]|IN201[07])(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'GM191[03517]'
@@ -9230,7 +9230,7 @@ OnePlus:
       model: '6'
     - regex: 'A601[03]'
       model: '6T'
-    - regex: 'IN2010[);/ ]'
+    - regex: 'IN201[07][);/ ]'
       model: '8'
     - regex: '(?:du_)?ONEPLUS ?([^;/]+) Build'
       model: '$1'
@@ -15503,9 +15503,13 @@ Tone:
 
 # AT&T
 AT&T:
-   regex: 'U304AA[);/ ]'
+   regex: '(?:U304AA|QS5509A)[);/ ]'
    device: 'smartphone'
-   model: 'Radiant Core'
+   models: ''
+     - regex: 'U304AA[);/ ]'
+       model: 'Radiant Core'
+     - regex: 'QS5509A[);/ ]'
+       model: 'Axia'
 
 # BIHEE
 BIHEE:
