feat(device) detect brand Unimax model: U693CL
issue #6341

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12319,9 +12319,9 @@ Uhappy:
     - regex: 'Uhappy[ _-]?([^;/)]+)[);/ ]'
       model: '$1'
 
-# Unimax
+# Unimax (UMX)
 Unimax:
-  regex: 'U((?:67[013]|680)C|(?:452|504)TL|683CL)[);/ ]'
+  regex: 'U((?:67[013]|680)C|(?:452|504)TL|683CL|693CL)[);/ ]'
   device: 'smartphone'
   model: 'U$1'
 
