--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9201,9 +9201,13 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[013]|HD191[01]|HD190[01357]|HD1925|IN201[07])(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[013]|HD191[01]|HD190[01357]|HD1925|IN201[037]|IN202[03])(?: Build|\))'
   device: 'smartphone'
   models:
+    - regex: 'IN202[03][);/ ]'
+      model: '8 Pro'
+    - regex: 'IN201[037][);/ ]'
+      model: '8'
     - regex: 'GM191[03517][);/ ]'
       model: '7 Pro'
     - regex: 'GM190[013][);/ ]'
@@ -9232,8 +9236,6 @@ OnePlus:
       model: '6'
     - regex: 'A601[03][);/ ]'
       model: '6T'
-    - regex: 'IN201[07][);/ ]'
-      model: '8'
     - regex: '(?:du_)?ONEPLUS ?([^;/]+) Build'
       model: '$1'
 
@@ -15423,11 +15425,16 @@ Maxtron:
   device: 'smartphone'
   model: '$1'
 
-# Philco
+# Philco (philco.com.br)
 Philco:
-  regex: '(PCS01|PH350B)[);/ ]'
+  regex: '(PCS01|PH350B|PTB7R)[);/ ]'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: '(PCS01|PH350B)[);/ ]'
+      model: '$1'
+    - regex: '(PTB7R)[);/ ]'
+      device: 'tablet'
+      model: '$1'
 
 # SEMP TCL
 SEMP TCL:
