fix: error tests;

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3598,7 +3598,7 @@ Danew:
 Denver:
   regex: '(?:TA[CDQ]-[0-9]+)|P(?:.+)TAQ-(?:[0-9]+)'
   device: 'tablet'
-  models: '$1'
+  models:
     - regex: 'P(?:.+)TAQ-(10172MK3|10242MK2|70242MK2|[0-9]+)[);/ ]'
       model: 'TAQ-$1'
     - regex: '(TA[CDQ]-[0-9]+)'
@@ -15514,7 +15514,7 @@ Tone:
 AT&T:
    regex: '(?:U304AA|QS5509A)[);/ ]'
    device: 'smartphone'
-   models: ''
+   models:
      - regex: 'U304AA[);/ ]'
        model: 'Radiant Core'
      - regex: 'QS5509A[);/ ]'
