refs #6334 - write year numbers in brackets in model names

--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -2410,7 +2410,7 @@
   device:
     type: smartphone
     brand: IH
-    model: Alien X Lite 2020
+    model: Alien X Lite (2020)
   os_family: Android
   browser_family: Chrome
 - 
@@ -2530,7 +2530,7 @@
   device:
     type: smartphone
     brand: IH
-    model: S10 Tank 2019
+    model: S10 Tank (2019)
   os_family: Android
   browser_family: Chrome
 - 
@@ -2550,7 +2550,7 @@
   device:
     type: smartphone
     brand: IH
-    model: S60 Discovery 2019
+    model: S60 Discovery (2019)
   os_family: Android
   browser_family: Chrome
 - 
