--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6067,7 +6067,7 @@ iHunt:
     - regex: 'iHunt_Like'
       model: 'Like'
     - regex: 'S10_Tank_2019'
-      model: 'S10 Tank 2019'
+      model: 'S10 Tank (2019)'
     - regex: 'One_ Love_'
       model: 'One Love'
     - regex: 'TITAN_P11000_PRO'
@@ -6081,9 +6081,9 @@ iHunt:
     - regex: 'X300 Elite'
       model: 'X300 Elite'
     - regex: 'S60_Discovery_2019'
-      model: 'S60 Discovery 2019'
+      model: 'S60 Discovery (2019)'
     - regex: 'AlienXLite2020'
-      model: 'Alien X Lite 2020'
+      model: 'Alien X Lite (2020)'
 
 # IconBIT
 IconBIT:
@@ -11824,13 +11824,13 @@ Amazon:
     - regex: 'KFASWI[);/ ]'
       model: 'Fire HD 7'
     - regex: 'KFAUWI[);/ ]'
-      model: 'Fire HD 7 2017'
+      model: 'Fire HD 7 (2017)'
     - regex: 'KFMEWI[);/ ]'
       model: 'Fire HD 8 (2015)'
     - regex: 'KFGIWI[);/ ]'
-      model: 'Fire HD 8 2016'
+      model: 'Fire HD 8 (2016)'
     - regex: 'KFDOWI[);/ ]'
-      model: 'Fire HD 8 2017'
+      model: 'Fire HD 8 (2017)'
     - regex: 'KFKAWI[);/ ]'
       model: 'Fire HD 8 (2018)'
     - regex: 'KFSAWI[);/ ]'
