Adds detection for Ulefone Armor 3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12344,7 +12344,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[27]|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12367,6 +12367,8 @@ Ulefone:
       model: 'U008 Pro'
     - regex: 'Armor[ _]2[);\ ]'
       model: 'Armor 2'
+    - regex: 'Armor[ _]3[);\ ]'
+      model: 'Armor 3'
     - regex: 'Armor[ _]7[);\ ]'
       model: 'Armor 7'
     - regex: 'Armor[ _]X6[);\ ]'
