--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1119,3 +1119,23 @@
     model: "8"
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 8.1.0; Armor_3 Build/O11019)
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ARM
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: UL
+    model: Armor 3
+  os_family: Android
+  browser_family: Android Browser
