sort test fixtures

--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -10,7 +10,7 @@
     type: browser
     name: Meizu Browser
     short_name: MZ
-    version: 8.11.5
+    version: "8.11.5"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -30,7 +30,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 74.0.3729.136
+    version: "74.0.3729.136"
     engine: Blink
     engine_version: ""
   device:
@@ -44,13 +44,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ""
   client:
     type: browser
     name: Meizu Browser
     short_name: MZ
-    version: 8.11.5
+    version: "8.11.5"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -64,13 +64,13 @@
   os:
     name: Android
     short_name: AND
-    version: 7.1.1
+    version: "7.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 76.0.3809.89
+    version: "76.0.3809.89"
     engine: Blink
     engine_version: ""
   device:
@@ -84,13 +84,13 @@
   os:
     name: Android
     short_name: AND
-    version: 7.1.2
+    version: "7.1.2"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 48.0.2564.116
+    version: "48.0.2564.116"
     engine: Blink
     engine_version: ""
   device:
@@ -104,13 +104,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: UC Browser
     short_name: UC
-    version: 11.0.4.846
+    version: "11.0.4.846"
     engine: WebKit
     engine_version: "534.30"
   device:
@@ -124,7 +124,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.4
+    version: "4.4.4"
     platform: ""
   client:
     type: browser
@@ -144,13 +144,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.0.2
+    version: "5.0.2"
     platform: ""
   client:
     type: browser
     name: 2345 Browser
     short_name: 2B
-    version: 7.5.1
+    version: "7.5.1"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -164,7 +164,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.4
+    version: "4.4.4"
     platform: ""
   client:
     type: browser
@@ -190,7 +190,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 79.0.3945.116
+    version: "79.0.3945.116"
     engine: Blink
     engine_version: ""
   device:
@@ -210,7 +210,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 70.0.3538.32
+    version: "70.0.3538.32"
     engine: Blink
     engine_version: ""
   device:
@@ -224,7 +224,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.2.1
+    version: "4.2.1"
     platform: ""
   client:
     type: browser
@@ -244,7 +244,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.2
+    version: "4.4.2"
     platform: ""
   client:
     type: browser
@@ -264,13 +264,13 @@
   os:
     name: Android
     short_name: AND
-    version: 4.0.4
+    version: "4.0.4"
     platform: ""
   client:
     type: browser
     name: Chrome
     short_name: CH
-    version: 42.0.2311.111
+    version: "42.0.2311.111"
     engine: Blink
     engine_version: ""
   device:
@@ -284,13 +284,13 @@
   os:
     name: Android
     short_name: AND
-    version: 4.0.3
+    version: "4.0.3"
     platform: ""
   client:
     type: browser
     name: Chrome
     short_name: CH
-    version: 42.0.2311.111
+    version: "42.0.2311.111"
     engine: Blink
     engine_version: ""
   device:
@@ -304,7 +304,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.1.1
+    version: "4.1.1"
     platform: ""
   client:
     type: browser
@@ -324,7 +324,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.0.3
+    version: "4.0.3"
     platform: ""
   client:
     type: browser
@@ -344,7 +344,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.2.2
+    version: "4.2.2"
     platform: ""
   client:
     type: browser
@@ -364,13 +364,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome
     short_name: CH
-    version: 74.0.3729.136
+    version: "74.0.3729.136"
     engine: Blink
     engine_version: ""
   device:
@@ -384,13 +384,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 75.0.3770.101
+    version: "75.0.3770.101"
     engine: Blink
     engine_version: ""
   device:
@@ -404,13 +404,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 58.0.3029.83
+    version: "58.0.3029.83"
     engine: Blink
     engine_version: ""
   device:
@@ -424,13 +424,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 39.0.0.0
+    version: "39.0.0.0"
     engine: Blink
     engine_version: ""
   device:
@@ -444,13 +444,13 @@
   os:
     name: Android
     short_name: AND
-    version: 5.1.1
+    version: "5.1.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 43.0.2357.121
+    version: "43.0.2357.121"
     engine: Blink
     engine_version: ""
   device:
@@ -464,13 +464,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 75.0.3770.143
+    version: "75.0.3770.143"
     engine: Blink
     engine_version: ""
   device:
@@ -490,7 +490,7 @@
     type: browser
     name: UC Browser
     short_name: UC
-    version: 12.9.7.1153
+    version: "12.9.7.1153"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -510,7 +510,7 @@
     type: browser
     name: UC Browser
     short_name: UC
-    version: 12.9.1.1071
+    version: "12.9.1.1071"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -524,13 +524,13 @@
   os:
     name: Android
     short_name: AND
-    version: 6.0.1
+    version: "6.0.1"
     platform: ""
   client:
     type: browser
     name: Sogou Mobile Browser
     short_name: SO
-    version: 5.28.7
+    version: "5.28.7"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -550,7 +550,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 74.0.3729.136
+    version: "74.0.3729.136"
     engine: Blink
     engine_version: ""
   device:
@@ -570,7 +570,7 @@
     type: browser
     name: UC Browser
     short_name: UC
-    version: 13.0.8.1291
+    version: "13.0.8.1291"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -590,7 +590,7 @@
     type: browser
     name: UC Browser
     short_name: UC
-    version: 13.0.8.1291
+    version: "13.0.8.1291"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -604,13 +604,13 @@
   os:
     name: Android
     short_name: AND
-    version: 7.1.2
+    version: "7.1.2"
     platform: ""
   client:
     type: browser
     name: Meizu Browser
     short_name: MZ
-    version: 8.1.210
+    version: "8.1.210"
     engine: WebKit
     engine_version: "537.36"
   device:
@@ -630,7 +630,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 79.0.3945.93
+    version: "79.0.3945.93"
     engine: Blink
     engine_version: ""
   device:
@@ -650,7 +650,7 @@
     type: browser
     name: Opera
     short_name: OP
-    version: 53.1.2569.142848
+    version: "53.1.2569.142848"
     engine: Blink
     engine_version: ""
   device:
@@ -670,7 +670,7 @@
     type: browser
     name: Opera Mobile
     short_name: OM
-    version: 53.1.2569.142848
+    version: "53.1.2569.142848"
     engine: Blink
     engine_version: ""
   device:
@@ -690,7 +690,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 80.0.3987.87
+    version: "80.0.3987.87"
     engine: Blink
     engine_version: ""
   device:
@@ -710,7 +710,7 @@
     type: browser
     name: Chrome Mobile
     short_name: CM
-    version: 80.0.3987.87
+    version: "80.0.3987.87"
     engine: Blink
     engine_version: ""
   device:
@@ -750,7 +750,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 39.0.0.0
+    version: "39.0.0.0"
     engine: Blink
     engine_version: ""
   device:
@@ -764,7 +764,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.2
+    version: "4.4.2"
     platform: ""
   client:
     type: browser
@@ -824,7 +824,7 @@
   os:
     name: Android
     short_name: AND
-    version: 4.4.4
+    version: "4.4.4"
     platform: ""
   client:
     type: browser
@@ -844,13 +844,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 76.0.3809.89
+    version: "76.0.3809.89"
     engine: Blink
     engine_version: ""
   device:
@@ -870,7 +870,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 84.0.4147.105
+    version: "84.0.4147.105"
     engine: Blink
     engine_version: ""
   device:
@@ -910,7 +910,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 84.0.4147.111
+    version: "84.0.4147.111"
     engine: Blink
     engine_version: ""
   device:
@@ -924,13 +924,13 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ""
   client:
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 84.0.4147.89
+    version: "84.0.4147.89"
     engine: Blink
     engine_version: ""
   device:
@@ -950,7 +950,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 84.0.4147.89
+    version: "84.0.4147.89"
     engine: Blink
     engine_version: ""
   device:
@@ -990,7 +990,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 84.0.4147.89
+    version: "84.0.4147.89"
     engine: Blink
     engine_version: ""
   device:
@@ -1050,7 +1050,7 @@
     type: browser
     name: Chrome Webview
     short_name: CV
-    version: 84.0.4147.89
+    version: "84.0.4147.89"
     engine: Blink
     engine_version: ""
   device:
@@ -1124,7 +1124,7 @@
   os:
     name: Android
     short_name: AND
-    version: 8.1.0
+    version: "8.1.0"
     platform: ARM
   client:
     type: browser
