--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -196,6 +196,26 @@
   os_family: Android
   browser_family: Chrome
 - 
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; M8SPROW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.96 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.1.2"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "83.0.4103.96"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: 0M
+    model: M8S Pro W
+  os_family: Android
+  browser_family: Chrome
+- 
   user_agent: Mozilla/5.0 (Linux; Android 8.1.0; HK1 Max) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.132 Safari/537.36
   os:
     name: Android
@@ -2350,6 +2370,26 @@
   os_family: Android
   browser_family: Android Browser
 - 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 7.0; SHIELD Android TV Build/NRD90M)
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tv
+    brand: NV
+    model: SHIELD Android TV
+  os_family: Android
+  browser_family: Android Browser
+- 
   user_agent: Mozilla/5.0 (Linux; Android 4.4.4; NG3128HD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
   os:
     name: Android
@@ -2549,6 +2589,26 @@
     model: 55PUS780912
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; 70PUH6774_96) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.136 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "79.0.3945.136"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: PH
+    model: 70PUH6774/96 4K UHD
+  os_family: Android
+  browser_family: Chrome
 - 
   user_agent: Mozilla/5.0 (Linux; Android 4.2.2; AND1E TV Build/JDQ39) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/29.0.1547.80 Safari/537.36
   os:
@@ -4010,6 +4070,66 @@
   os_family: Unknown
   browser_family: Unknown
 - 
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; K32DLX9HS Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/51.0.2704.91 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: "51.0.2704.91"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: T0
+    model: K32DLX9HS
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; K40DLX9FS Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/51.0.2704.91 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: "51.0.2704.91"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: T0
+    model: K40DLX9FS
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/TCL;SW-Version/V8-T56FSPS-LF1V032;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPS-LF1V032 TCL,32D1820,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TC
+    model: 32D1820
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
   user_agent: Opera/9.80 (Linux mips; U; NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;TCL LF1V042; en) Presto/2.10.287 Version/12.00
   os:
     name: GNU/Linux
@@ -4227,6 +4347,206 @@
     type: tv
     brand: TN
     model: LF1V375
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T28D18SFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T28D18SFS-01B 28.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V048;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V048 THOMSON,T32D18SFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T32D18SFS-01B 32.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V092;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V092 THOMSON,T32RTM5040,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T32RTM5040 32.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T40D18SFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T40D18SFS-01B 40.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T43D18SFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T43D18SFS-01B 43.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V069;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V069 THOMSON,T43FSL5031,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T43FSL5031 43.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T49D18SFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T49D18SFS-01B 49.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V092;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V092 THOMSON,T55D18DFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T55D18DFS-01B 55.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T55D18SFS-01B,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: T55D18SFS-01B 55.0"
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V096;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V096 THOMSON,TB28D19DHS-01,wireless
+  os:
+    name: GNU/Linux
+    short_name: LIN
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    short_name: OP
+    version: "9.80"
+    engine: Presto
+    engine_version: ""
+  device:
+    type: tv
+    brand: TN
+    model: TB28D19DHS-01 28.0"
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -4592,6 +4912,46 @@
   os_family: Google TV
   browser_family: Chrome
 - 
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-LED32M04S Build/M5C14J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: "67.0.3396.87"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: X2
+    model: SM-LED32M04S
+  os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-LED32M11S Build/M5C14J; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/48.0.2542.0 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: "48.0.2542.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: X2
+    model: SM-LED32M11S
+  os_family: Android
+  browser_family: Chrome
+- 
   user_agent: Mozilla/5.0 Linux; Android 6.0.1; NEXBOX-A1 Build/NEXBOX-A1; wv AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/44.0.2403.119 Safari/537.36
   os:
     name: Android
@@ -4732,6 +5092,26 @@
   os_family: Android
   browser_family: Android Browser
 - 
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; MiBOX2 Build/KOT49H; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/62.0.3202.97 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "4.4.2"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: "62.0.3202.97"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: XI
+    model: Mi Box 2
+  os_family: Android
+  browser_family: Chrome
+- 
   user_agent: Mozilla/5.0 (Linux; Andr0id 6.0.1; MIBOX3 Build/MHC19J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.59.E9103576.114
   os:
     name: GNU/Linux
@@ -4791,6 +5171,26 @@
     model: Mi Box 4
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 6.0.1; zh-cn; MiTV4A Build/MHC19J) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.132 MQQBrowser/8.4 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0.1"
+    platform: ""
+  client:
+    type: browser
+    name: QQ Browser
+    short_name: QQ
+    version: "8.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: XI
+    model: MiTV 4A
+  os_family: Android
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; MiTV-AXSO0 Build/OPM1.171019.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/61.0.3163.98 Safari/537.36 OPR/31.0.2254.122029
   os:
@@ -4931,223 +5331,3 @@
     model: X9S
   os_family: Android
   browser_family: Unknown
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V096;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V096 THOMSON,TB28D19DHS-01,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: TB28D19DHS-01 28.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V092;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V092 THOMSON,T55D18DFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T55D18DFS-01B 55.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V092;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V092 THOMSON,T32RTM5040,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T32RTM5040 32.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V069;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V069 THOMSON,T43FSL5031,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T43FSL5031 43.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T55D18SFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T55D18SFS-01B 55.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V048;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V048 THOMSON,T32D18SFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T32D18SFS-01B 32.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T49D18SFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T49D18SFS-01B 49.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T43D18SFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T43D18SFS-01B 43.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T40D18SFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T40D18SFS-01B 40.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/THOMSON;SW-Version/V8-T56FSPK-LF1V039;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPK-LF1V039 THOMSON,T28D18SFS-01B,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TN
-    model: T28D18SFS-01B 28.0"
-  os_family: GNU/Linux
-  browser_family: Opera
--
-  user_agent: Opera/9.80 X11;Linux armv7i;NETRANGEMMH;HbbTV/1.1.1;CE-HTML/1.0;Vendor/TCL;SW-Version/V8-T56FSPS-LF1V032;Cnt/GBR;Lan/eng;U;en AppleWebKit/534.24 KHTML, like Gecko Safari/534.24, Digital-TV/V8-T56FSPS-LF1V032 TCL,32D1820,wireless
-  os:
-    name: GNU/Linux
-    short_name: LIN
-    version: ""
-    platform: ARM
-  client:
-    type: browser
-    name: Opera
-    short_name: OP
-    version: "9.80"
-    engine: Presto
-    engine_version: ""
-  device:
-    type: tv
-    brand: TC
-    model: 32D1820
-  os_family: GNU/Linux
-  browser_family: Opera
