feat(device) detect brand Asus model: ZenFone 3 Max (X00DS)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2000,7 +2000,7 @@ Asus:
       model: 'ZenFone 3'
     - regex: '(?:ASUS_)?Z01B[DS]|ZC551KL'
       model: 'ZenFone 3 Laser'
-    - regex: '(?:ASUS_)?X00DD|ZC553KL'
+    - regex: '(?:ASUS_)?X00D[DS]|ZC553KL'
       model: 'ZenFone 3 Max'
     - regex: '(?:ASUS_)?A001'
       model: 'ZenFone 3 Ultra'
