--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1359,3 +1359,23 @@
     model: Note Grace V
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; ASUS_X00DS Build/OPM1.171019.011; it-it) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Mobile Safari/537.36 Puffin/7.8.3.40913AP
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Puffin
+    short_name: PU
+    version: 7.8.3.40913
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: AU
+    model: ZenFone 3 Max
+  os_family: Android
+  browser_family: Unknown
