feat(device) detect brand Aligator model: S5066 feat(device) detect brand Bravis model: S500 Diamond

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -758,6 +758,8 @@ Bravis:
       model: 'Space'
     - regex: 'BRAVIS[ ]A554'
       model: 'A554 Grand'
+    - regex: 'BRAVIS[ ]S500'
+      model: 'S500 Diamond'
     - regex: 'A505 JOY Plus'
       model: 'A505 Joy Plus'
     - regex: 'A552 JOY Max'
@@ -15033,10 +15035,10 @@ RugGear:
 
 # Aligator
 Aligator:
-  regex: 'ALIGATOR[);/ ]'
+  regex: 'ALIGATOR[_);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'ALIGATOR (S50(?:65|[67]0))[);/ ]'
+    - regex: 'ALIGATOR[ _](S50(?:6[56]|[67]0))[);/ ]'
       model: '$1'
 
 # Maxcom
