--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1479,3 +1479,43 @@
     model: Power Ice
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Aligator_S5066 Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/69.0.3497.100 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 69.0.3497.100
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: 4A
+    model: S5066
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; BRAVIS S500) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Mobile Safari/537.36 OPR/55.1.2719.50626
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    short_name: OM
+    version: 55.1.2719.50626
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BV
+    model: S500 Diamond
+  os_family: Android
+  browser_family: Opera
