feat(device) detect new brand MyTab models: U55GT, 8 Mini Dual Core issue #6340

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8722,6 +8722,16 @@ MTN:
     - regex: 'MTN-([a-z0-9_\-]+)'
       model: 'MTN-$1'
 
+# MyTab
+MyTab:
+  regex: 'MyTAB[ _-](?:8 MINI Dual Core|U55GT)[);/ ]'
+  device: 'tablet'
+  models:
+    - regex: 'MyTAB[ _-]8 MINI Dual Core[);/ ]'
+      model: '8 Mini Dual Core'
+    - regex: 'MyTAB-U55GT[);/ ]'
+      model: 'U55GT'
+
 # myphone
 MyPhone:
   regex: '(?:MyPhone|MyPad|MyTab)[ _][^;/)]+( Build|\))|Cube_LTE|myTab10II|HAMMER[ _](Blade2_PRO|ENERGY|Titan 2|AXE[_ ](?:M[_ ]LTE|Pro)|Iron 2|Active[2]?(_LTE)?)|C-Smart_pix|myPhone_Fun_8'
