--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -1519,3 +1519,43 @@
     model: S500 Diamond
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.2.2; MyTAB 8 MINI Dual Core Build/JDQ39)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 3T
+    model: 8 Mini Dual Core
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla / 5.0 (Linux; Android 4.2.2; Mytab-U55GT Build / JDQ39) AppleWebKit / 537.36 (KHTML, как Gecko) Chrome / 71.0.3578.99 Safari / 537.36 OPR / 50.3.2426.136976
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: ""
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: 3T
+    model: U55GT
+  os_family: Android
+  browser_family: Chrome
