feat(bot) detect new Crawler Seobility issue #6345

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3724,3 +3724,10 @@
     name: theoldreader
     category: Feed Reader
     url: https://theoldreader.com
+
+-
+  user_agent: Seobility
+  bot:
+    name: Seobility
+    category: Crawler
+    url: 'https://www.seobility.net/en/faq/?category=crawling#!aboutourbot'
